@@ -122,7 +122,6 @@ NOTE: sorry, this is very raw :)
 
 * The 131 thing makes absolutey no sense. at least use 128.
 
-* crash in crimson tide blue sea when scrolling in score mode (because of very long low note...)
 * crimson tide blue sea --> find out why score notes don't beam
 
 * in guitar editor, put 2 notes on two strings. move them down until both are on lowest string. undo and try to get back those you had in the beginning
