@@ -10,6 +10,7 @@ SVN
 - Key is now correctly loaded from files in keyboard editor too
 - Added check next to currently selected key in key pop-up menu
 - Somewhat better handling of out-of-range notes in keyboard editor
+- Fixed crashes and heap corruption in score editor
 
 1.1.1
 - Added feature to see other tracks in background of current track (keyboard view only for now)
